# pFaces-OmegaThreads

./: .gitignore  .ignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build.bat  build.sh  install-owl-19.06.03.sh  install-owl.sh  test.bat  test.sh
.github/workflows/: main.yml
examples/deepracer/: deepracer.cfg  deepracer.cl  deepracer_light.cfg  deepracer_ode.m  deepracer_small.cfg  deepracer_xsmall.cfg  ros_deepracer_controller.py  simulate.py  solve.sh  test_dyn.m
examples/deepracer/InMap_ident/: Model.tex
examples/deepracer/InMap_ident/Steering/: importfile.m
examples/deepracer/InMap_ident/Steering/manual/: AWS_DR_InputMapIdent.xlsx  getCurve.m
examples/deepracer/InMap_ident/Steering/via_motive/: DeepRacerGetSteeringAngle.m  getCurve.m
examples/deepracer/InMap_ident/Steering/via_motive/data/: ImportMotiveDataFile.m  N_0.csv  N_10.csv  N_100.csv  N_15.csv  N_20.csv  N_25.csv  N_30.csv  N_35.csv  N_40.csv  N_45.csv  N_5.csv  N_50.csv  N_55.csv  N_60.csv  N_65.csv  N_70.csv  N_75.csv  N_80.csv  N_85.csv  N_90.csv  N_95.csv  P_10.csv  P_100.csv  P_15.csv  P_20.csv  P_25.csv  P_30.csv  P_35.csv  P_40.csv  P_45.csv  P_5.csv  P_50.csv  P_55.csv  P_60.csv  P_65.csv  P_70.csv  P_75.csv  P_80.csv  P_85.csv  (+2 more)
examples/deepracer/InMap_ident/Velocity/: DeepRacerGetVelocity.asv  DeepRacerGetVelocity.m  ImportMotiveDataFile.m  filtter_spikes.m
examples/deepracer/InMap_ident/Velocity/data/: BW_45.csv  BW_50.csv  BW_55.csv  BW_60.csv  BW_65.csv  BW_70.csv  FW_100.csv  FW_45.csv  FW_50.csv  FW_55.csv  FW_60.csv  FW_65.csv  FW_70.csv  FW_75.csv  FW_80.csv  FW_85.csv  FW_90.csv  FW_95.csv
examples/deepracer/InMap_ident/Velocity/data_cleaned/: BW55.mat  BW70.mat  FW50.mat  FW55.mat  time_diff.mat
examples/deepracer/InMap_ident/Velocity/data_newbattery/: BW_45.csv  BW_50.csv  BW_55.csv  BW_60.csv  BW_65.csv  BW_70.csv  FW_45.csv  FW_50.csv  FW_55.csv  FW_60.csv  FW_65.csv  FW_70.csv  ImportMotiveDataFile.m
examples/deepracer/InMap_ident/Velocity/data_oldbattery/: BW_45.csv  BW_50.csv  BW_55.csv  BW_60.csv  BW_65.csv  BW_70.csv  FW_100.csv  FW_45.csv  FW_50.csv  FW_55.csv  FW_60.csv  FW_65.csv  FW_70.csv  FW_75.csv  FW_80.csv  FW_85.csv  FW_90.csv  FW_95.csv  ImportMotiveDataFile.m
examples/deepracer/InMap_ident/Velocity/data_oldbattery/data_cleaned/: BW45.mat  BW50.mat  BW60.mat  BW65.mat  FW45.mat  FW60.mat  FW65.mat  FW70.mat
examples/deepracer/InMap_ident/r-data/: 0_0_x3_x4_u1_u2_to_r.mat  det_model_simdata.csv  get_r_data.m  get_r_data.m~  get_r_data_MC.m  importfile.m  linregress_r.m
examples/pickupdelivery/: pickupdelivery.cfg  pickupdelivery.cl  simulate.py  test_ode.py
examples/pickupdelivery_hybrid/: pickupdelivery.cfg  pickupdelivery.cl  simulate.py  solve.sh  test_hybrid_model.py
examples/quadrotor4d/: quadrotor.cl  quadrotor4dDBA.cfg  simulate.py  solve.sh
examples/robot16/: robot16.cfg
examples/robot2d/: README.md  robot.cfg  simulate.py
examples/robot2d_dpa/: robot.cfg  robot.cl  robot.pa  simulate.py  solve.sh
examples/robot2d_ros_codegen/: robot.cfg  robot.cl  ros_robot_controller.py
examples/vehicle3d/: ros_robot_controller.py  simulate.py  solve.sh  vehicle.cfg  vehicle.cl  vehicle.controller_bkp  vehicle.dpa
examples/vehicle3d/scots/: CuddMintermIterator.hh  FixedPoint.hh  Makefile  RungeKutta4.hh  SymbolicModel.hh  SymbolicModelGrowthBound.hh  SymbolicSet.hh  TicToc.hh  vehicle  vehicle.cc  vehicle_controller1.bdd  vehicle_obst.bdd  vehicle_ss.bdd  vehicle_target.bdd  vehicle_target1.bdd  vehicle_target2.bdd
interface/python/: Omega2dSimulator.py  OmegaInterface.py
kernel/: Makefile
kernel-driver/: Makefile  func_construct_pgame.cpp  func_construct_symmodel.cpp  func_discover_u_aps.cpp  func_discover_x_aps.cpp  func_implement.cpp  func_solve_pgame.cpp  omega.cpp  omega.h  omegaControlProblem.cpp  omegaControlProblem.h  omegaDpa.cpp  omegaDpa.h  omegaImplementation.cpp  omegaImplementation.h  omegaParityGames.cpp  omegaParityGames.h  omegaUtils.cpp  omegaUtils.h
kernel-driver/lib/: Makefile
kernel-driver/lib/ltl2dpa/: CMakeLists.txt  Makefile  install-owl.bat  install-owl.sh
kernel-driver/lib/ltl2dpa/include/: Ltl2Dpa.h  StrixLTLParser.h
kernel-driver/lib/ltl2dpa/src/: StrixAutomaton.cpp  StrixLtl2Dpa.cpp  StrixOwl.cpp
kernel-driver/lib/ltl2dpa/tests/dpa_explorer/: CMakeLists.txt  dpa.h  test.cpp
kernel-driver/lib/ltl2dpa/tests/strix/: CMakeLists.txt  pgame.h  test.cpp
kernel-driver/lib/ltl2dpa/tests/symmodel_solver/: CMakeLists.txt  SymLtlSpec.h  pgame.h  test.cpp
kernel-pack/: config.defaults  config.template  omega.cl  omega.cpu.cl  omega.gpu.cl  omega.hwa.cl  omega.mem  omega_aps.cl  omega_pgame.cl  omega_pgame_construct.cl  omega_symmodel.cl  omega_utils.cl
kernel-pack/templates/: ROS_PYTHON.py
kernel/lib/: Makefile
kernel/lib/cudd/: Makefile  Makefile.inc  config.h  cudd.vcxproj  cudd.vcxproj.filters  cuddSymbolicSet.cc  cuddSymbolicset.hh  datasizes64.h  dddmpNodeBdd.c  sizecheck  sizecheck.c  sizecheck.vcxproj
kernel/lib/ltl2dpa/: .ignore  CMakeLists.txt  Makefile  install-owl.sh
kernel/lib/ltl2dpa/_old/: CMakeLists.txt
kernel/lib/ltl2dpa/_old/tests/owl-interface/: CMakeLists.txt
kernel/lib/ltl2dpa/include/: StrixLtl2Dpa.h
kernel/lib/ltl2dpa/tests/strix/: machine.h  pgame.h
kernel/lib/ltl2dpa/tests/symmodel_solver/: machine.h  pgame.h  pgsolver.h  test.cpp
kernel/lib/strix-aut-cpp/: CMakeLists.txt  Makefile  install-owl.sh
kernel/lib/strix-aut-cpp/include/: StrixAutomaton.h
kernel/lib/strix-aut-cpp/src/: Automaton.cpp
kernel/lib/strix-ltl2dpa/: CMakeLists.txt  Makefile  install-owl.sh
kernel/lib/strix-ltl2dpa/_old/: Makefile
kernel/lib/strix-ltl2dpa/include/: StrixAutomaton.h  StrixOwl.h
kernel/lib/strix-ltl2dpa/src/: StrixAutomaton.cpp  StrixLTLParser.cpp  StrixLtl2Dpa.cpp
kernel/lib/strix-ltl2dpa/tests/: CMakeLists.txt  pgame.h  test.cpp
tests/owl-interface/: CMakeLists.txt  Makefile  owlTest.cpp
